--- a/DEHPMatlab/Views/DstNetChangePreview.xaml
+++ b/DEHPMatlab/Views/DstNetChangePreview.xaml
@@ -6,6 +6,7 @@
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:behaviors="clr-namespace:DEHPCommon.UserInterfaces.Behaviors;assembly=DEHPCommon"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -16,58 +17,60 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
-        <dxg:TreeListControl ItemsSource="{Binding InputVariablesCopy}"
-                                 SelectedItem="{Binding SelectedThing}"
-                                 SelectedItems="{Binding SelectedThings}"
-                                 SelectionMode="MultipleRow">
-            <dxmvvm:Interaction.Behaviors>
-                <behaviors:ContextMenuBehavior/>
-            </dxmvvm:Interaction.Behaviors>
-            <dxg:TreeListControl.View>
-                <dxg:TreeListView Name="View"
-                                      AllowEditing="False"
-                                      AutoWidth="False"
-                                      EditorShowMode="MouseUpFocused"
-                                      ExpandCollapseNodesOnNavigation="True"
-                                      ExpandStateFieldName="IsExpanded"
-                                      FixedLineWidth="0"
-                                      HorizontalScrollbarVisibility="Auto"
-                                      NavigationStyle="Cell"
-                                      ShowHorizontalLines="False"
-                                      ShowIndicator="False"
-                                      ShowNodeImages="False"
-                                      ShowVerticalLines="False"
-                                      TreeDerivationMode="Selfreference"
-                                      KeyFieldName="Name"
-                                      ParentFieldName="ParentName"
-                                      TreeLineStyle="Solid"
-                                      VerticalScrollbarVisibility="Auto"
-                                      ToolTip="Select variables to transfer">
-                    <dxg:TreeListView.ContextMenu>
-                        <ContextMenu Name="RowContextMenu" />
-                    </dxg:TreeListView.ContextMenu>
-                    <dxg:TreeListView.RowStyle>
-                        <Style TargetType="{x:Type dxg:RowControl}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Row.IsHighlighted}" Value="True">
-                                    <Setter Property="Background" Value="Yellow"/>
-                                    <Setter Property="FontWeight" Value="Bold" />
-                                    <Setter Property="Foreground" Value="Blue" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Row.IsSelectedForTransfer}" Value="True">
-                                    <Setter Property="Background" Value="LightGreen"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </dxg:TreeListView.RowStyle>
-                </dxg:TreeListView>
-            </dxg:TreeListControl.View>
-            <dxg:TreeListControl.Columns>
-                <dxg:TreeListColumn AllowEditing="False" FieldName="Name" Fixed="Left" />
-                <dxg:TreeListColumn AllowEditing="False" FieldName="ActualValue" />
-                <dxg:TreeListColumn AllowEditing="False" FieldName="InitialValue" />
-            </dxg:TreeListControl.Columns>
-        </dxg:TreeListControl>
-    </Grid>
+    <dx:LoadingDecorator BorderEffect="Default" BorderEffectColor="Blue" IsSplashScreenShown="{Binding IsBusy}" OwnerLock="LoadingContent">
+        <Grid>
+            <dxg:TreeListControl ItemsSource="{Binding InputVariablesCopy}"
+                                     SelectedItem="{Binding SelectedThing}"
+                                     SelectedItems="{Binding SelectedThings}"
+                                     SelectionMode="MultipleRow">
+                <dxmvvm:Interaction.Behaviors>
+                    <behaviors:ContextMenuBehavior/>
+                </dxmvvm:Interaction.Behaviors>
+                <dxg:TreeListControl.View>
+                    <dxg:TreeListView Name="View"
+                                          AllowEditing="False"
+                                          AutoWidth="False"
+                                          EditorShowMode="MouseUpFocused"
+                                          ExpandCollapseNodesOnNavigation="True"
+                                          ExpandStateFieldName="IsExpanded"
+                                          FixedLineWidth="0"
+                                          HorizontalScrollbarVisibility="Auto"
+                                          NavigationStyle="Cell"
+                                          ShowHorizontalLines="False"
+                                          ShowIndicator="False"
+                                          ShowNodeImages="False"
+                                          ShowVerticalLines="False"
+                                          TreeDerivationMode="Selfreference"
+                                          KeyFieldName="Name"
+                                          ParentFieldName="ParentName"
+                                          TreeLineStyle="Solid"
+                                          VerticalScrollbarVisibility="Auto"
+                                          ToolTip="Select variables to transfer">
+                        <dxg:TreeListView.ContextMenu>
+                            <ContextMenu Name="RowContextMenu" />
+                        </dxg:TreeListView.ContextMenu>
+                        <dxg:TreeListView.RowStyle>
+                            <Style TargetType="{x:Type dxg:RowControl}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Row.IsHighlighted}" Value="True">
+                                        <Setter Property="Background" Value="Yellow"/>
+                                        <Setter Property="FontWeight" Value="Bold" />
+                                        <Setter Property="Foreground" Value="Blue" />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding Row.IsSelectedForTransfer}" Value="True">
+                                        <Setter Property="Background" Value="LightGreen"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </dxg:TreeListView.RowStyle>
+                    </dxg:TreeListView>
+                </dxg:TreeListControl.View>
+                <dxg:TreeListControl.Columns>
+                    <dxg:TreeListColumn AllowEditing="False" FieldName="Name" Fixed="Left" />
+                    <dxg:TreeListColumn AllowEditing="False" FieldName="ActualValue" />
+                    <dxg:TreeListColumn AllowEditing="False" FieldName="InitialValue" />
+                </dxg:TreeListControl.Columns>
+            </dxg:TreeListControl>
+        </Grid>
+    </dx:LoadingDecorator>
 </UserControl>
