--- a/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
+++ b/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
@@ -14,7 +14,7 @@
                    xmlns:converters="clr-namespace:DEHPCommon.Converters;assembly=DEHPCommon"
                    Title="Mapping Configuration Dialog"
                    WindowStartupLocation="CenterScreen" Topmost="True"
-                   mc:Ignorable="d" MinHeight="450" MinWidth="800">
+                   mc:Ignorable="d" MinHeight="450" MinWidth="800" MaxWidth="1200" MaxHeight="1000">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
