--- a/DEHPMatlab/Views/Dialogs/DstConnect.xaml
+++ b/DEHPMatlab/Views/Dialogs/DstConnect.xaml
@@ -7,11 +7,10 @@
                     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
                     xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
                     xmlns:behaviors="clr-namespace:DEHPCommon.UserInterfaces.Behaviors;assembly=DEHPCommon"
-                    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
                     mc:Ignorable="d"
                     Title="Connect to Matlab" 
                     WindowStartupLocation="CenterScreen"
-                    Height="200" Width="500" Topmost="True">
+                    Height="120" Width="450" Topmost="True" ResizeMode="NoResize">
     <dxmvvm:Interaction.Behaviors>
         <behaviors:CloseWindowBehavior/>
     </dxmvvm:Interaction.Behaviors>
@@ -40,7 +39,6 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Text="Matlab Version :" Margin="5" />
@@ -52,31 +50,6 @@
                                       SelectedItem="{Binding SelectedMatlabVersion}" 
                                       ToolTip="Choose the wanted Matlab Version to run (must be installed)" >
                     </dxe:ComboBoxEdit>
-                    <dxlc:LayoutItemLabel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Height="Auto"  Content="Mapping Configuration :" FontSize="12"/>
-                    <Grid Grid.Row="1" Grid.Column="1" Margin="15 0 0 0" >
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <dxe:ComboBoxEdit Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="ModelBoxEdit"  
-                                          DisplayMember="ExternalModelName" ShowNullTextForEmptyValue="True"
-                                          Height="25" Margin="5" FontSize="12" SelectedItem="{Binding SelectedExternalIdentifierMap}"
-                                          ItemsSource="{Binding AvailableExternalIdentifierMap}" IncrementalFiltering="True" 
-                                          NullValueButtonPlacement="EditBox" NullText="No Mapping Configuration Selected"
-                                          ToolTip="Select an existing mapping"/>
-
-                        <CheckBox Grid.Column="0" Grid.Row="1" Height="25" Content="New Configuration" IsChecked="{Binding CreateNewMappingConfigurationChecked}" />
-                        
-                        <dxe:TextEdit Grid.Column="1" Grid.Row="1" Height="25" Margin="5" FontSize="12"
-                                      ShowNullTextForEmptyValue="True" ToolTip="Enter a name wich will identify the mapping configuration to be saved  &#x0a;suggestion: Matlab Script name" 
-                                      NullText="Enter a new mapping configuration name"
-                                      Text="{Binding Path=ExternalIdentifierMapNewName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-
-                    </Grid>
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
